syntax = "proto3";

package gamerspb;

import "gamerspb/messages.proto";

service GamersService {
  rpc CreateGamer(CreateGamerRequest) returns (CreateGamerResponse){};
  rpc DisapproveGamer(DisapproveGamerRequest) returns (DisapproveGamerResponse){};
}

message CreateGamerRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string password = 4;
}

message CreateGamerResponse {
  string id = 1;
}

message DisapproveGamerRequest {
  string id = 1;
}

message DisapproveGamerResponse {
  string id = 1;
}